	mod_neko2 : remove Apache 2.0 error message, use 302 http code for redirect
	fixed fallback of interp operator overloading
	fix for 64-bit CPU
	minor optimization for [0] jit array access
	gnuk/freebsd support
	fixed thread messages on Windows (do not use system queue)
	thread_current returns unique value
	remove kind_import, kind_export, added kind_share
	added ui library
	TODO : FIX OO for JIT AS WELL
	TODO : process output capture

2007-01-28 : 1.5.3
	minor fixes in mod_neko multipart and POST data handling
	fixed $objremove result (was always true)
	fixed one-last-bug when using more-than-five-arguments method call return value
	fixed bug in dev webserver when accessing a directory
	added xcross support
	fixed bug with $setresolver in bytecode interpreter
	changed bootable vm implementation (easier, allow compressed bin)
	added .mode in sys_stat
	change in $version format

2006-11-22 : 1.5.2
	fixed std math_pow float
	minor thread cleanup
	added MySQL5.ndll for Windows
	fields hash cache is now global (instead of per-thread)
	socket_select retry on EINTR
	fixed under-second lock timeout for Linux/OSX
	added socket_poll for Linux/OSX (emulate with select() on Windows)
	fixed compilation bug when accessing 'this' in arguments and more than 5 args
	fixed string_split with empty string (was causing infinite loop)
	fixes in more-than-five-arguments-calls
	added $varargs

2006-10-29 : 1.5
	neko web server : get_client_header is now case-insensitive
	std : new thread and lock api
	neko : when run from commandline, SEGV on Linux are turned into exceptions
	+ added mod_neko2 error if used with Apache 2.0.x

2006-10-09 : 1.4.5
	sqlite : added BOOL handling
	jit : added mmap support (for execution protection)
	jit : fixed bug when unsupported operation exception
	vm : fixed bug in debug infos reading when nfiles > 255
	vm : fixed bug in interp -> jit call
	vm : default NEKOPATH is now the same on OSX/Linux
	vm : optimized debug infos runtime memory size